fix wrong color

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -146,6 +146,6 @@ input, textarea
 
 .dark-mode-content
   .dark-mode &
-    color: $yellow
+    color: $dark-primary
 
 @import "~bulma"
